fixed errors reported by Error Prone in commit 6c8f813e539aa9741f61a13a2975a93124f87f54